feat:sidebar-style

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -18,13 +18,13 @@
             </div>
             
             <ul class="nav-menu">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a href="#" class="nav-link" data-section="dashboard">
                         <i class="nav-icon fas fa-th-large"></i>
                         Dashboard
                     </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a href="#" class="nav-link" data-section="bookings">
                         <i class="nav-icon fas fa-calendar-alt"></i>
                         Bookings
@@ -173,7 +173,7 @@
                                 <h4>Attention Required</h4>
                             </div>
                             <p>9 vehicles are parked without booking.</p>
-                            <button class="alert-action">View Details</button>
+                            <button class="alert-action attention">View Details</button>
                         </div>
 
                         <!-- Sensor Issues -->
@@ -183,7 +183,7 @@
                                 <h4>Sensor Issues</h4>
                             </div>
                             <p>12 slots with sensor or connectivity issues require immediate attention.</p>
-                            <button class="alert-action">View Details</button>
+                            <button class="alert-action sensor">View Details</button>
                         </div>
 
                         <!-- Usage Insights -->
