--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -6,81 +6,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../public/css/common-styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bookings.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="bookings-container">
-        <div class="sidebar">
-            <nav class="sidebar">
-                <div class="sidebar-header">
-                    <h2 class="logo">ParkNex</h2>
-                    <p class="logo-subtitle">Parking Management</p>
+    <div class="main-container d-flex">
+        <nav class="sidebar">
+            <div class="sidebar-header">
+                <h2 class="logo">ParkNex</h2>
+                <p class="logo-subtitle">Parking Management</p>
+            </div>
+
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-section="dashboard">
+                        <i class="nav-icon fas fa-th-large"></i>
+                        Dashboard
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a href="#" class="nav-link" data-section="bookings">
+                        <i class="nav-icon fas fa-calendar-alt"></i>
+                        Bookings
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-section="reports">
+                        <i class="nav-icon fas fa-file-alt"></i>
+                        Reports
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-section="vehicle-management">
+                        <i class="nav-icon fas fa-car"></i>
+                        Vehicle Management
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-section="slot-management">
+                        <i class="nav-icon fas fa-plus"></i>
+                        Slot Management
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-section="notifications">
+                        <i class="nav-icon fas fa-bell"></i>
+                        Notifications
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-section="settings">
+                        <i class="nav-icon fas fa-cog"></i>
+                        Settings
+                    </a>
+                </li>
+            </ul>
+
+            <div class="sidebar-footer">
+                <div class="admin-profile">
+                    <div class="admin-avatar">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="admin-info">
+                        <p class="admin-name">Admin User</p>
+                        <p class="admin-email">admin@park.com</p>
+                    </div>
                 </div>
-
-                <ul class="nav-menu">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" data-section="dashboard">
-                            <i class="nav-icon fas fa-th-large"></i>
-                            Dashboard
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="#" class="nav-link" data-section="bookings">
-                            <i class="nav-icon fas fa-calendar-alt"></i>
-                            Bookings
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" data-section="reports">
-                            <i class="nav-icon fas fa-file-alt"></i>
-                            Reports
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" data-section="vehicle-management">
-                            <i class="nav-icon fas fa-car"></i>
-                            Vehicle Management
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" data-section="slot-management">
-                            <i class="nav-icon fas fa-plus"></i>
-                            Slot Management
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" data-section="notifications">
-                            <i class="nav-icon fas fa-bell"></i>
-                            Notifications
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" data-section="settings">
-                            <i class="nav-icon fas fa-cog"></i>
-                            Settings
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="sidebar-footer">
-                    <div class="admin-profile">
-                        <div class="admin-avatar">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <div class="admin-info">
-                            <p class="admin-name">Admin User</p>
-                            <p class="admin-email">admin@park.com</p>
+            </div>
+        </nav>
+        <div class="main-content d-flex-column">
+            <header class="dashboard-header">
+                <div class="header-content d-flex align-items-center justify-content-between px-4 pt-4">
+                    <div class="header-left">
+                        <h2>Bookings</h2>
+                    </div>
+                    <div class="header-right">
+                        <img src="../public/assets/images/notification.png" alt="Notifications"
+                            class="notification-icon w-80 h-80">
+                    </div>
+                </div>
+            </header>
+            <main>
+                <div class="sub-heading-container d-flex-column p-4">
+                    <h4>All Booking(9)</h4>
+                    <div class="filters-container d-flex">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <div class="btn-group">
+                            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Small button
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </nav>
-        </div>
-        <div class="main-content">
-
+            </main>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
