--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -6,7 +6,7 @@
 
     <ul class="nav-menu">
         <li class="nav-item">
-            <a href="#" class="nav-link" data-section="dashboard">
+            <a href="dashboard.html" class="nav-link" data-section="dashboard">
                 <i class="nav-icon fas fa-th-large"></i>
                 Dashboard
             </a>
@@ -30,7 +30,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link" data-section="slot-management">
+            <a href="slot-management.html" class="nav-link" data-section="slot-management">
                 <i class="nav-icon fas fa-plus"></i>
                 Slot Management
             </a>
