--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../public/css/common-styles.css">
     <link rel="stylesheet" href="css/bookings.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -89,26 +90,77 @@
                 </div>
             </header>
             <main>
-                <div class="sub-heading-container d-flex-column p-4">
-                    <h4>All Booking(9)</h4>
-                    <div class="filters-container d-flex">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <div class="btn-group">
-                            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Small button
+                <div class="sub-heading-container d-flex-column p-4 pe-0">
+                    <div class="d-flex align-items-center mb-2">
+                        <h4>All Booking(9)</h4>
+                    </div>
+                    <div class="filters-container d-flex gap-4">
+                        <input class="form-control mr-sm-2 w-80 h-50 search-bar border-dark rounded-3" type="search"
+                            placeholder="Search" aria-label="Search">
+                        <div class="btn-dropdown h-50 d-flex align-items-center justify-content-between w-25">
+                            <span>Status</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <div class="btn-dropdown h-50 d-flex align-items-center justify-content-between w-25">
+                            <span>Date</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+
+                        <div class="button-container">
+                            <button class="btn ms-2 h-60 w-45 btn-primary btn-sm p-2 rounded-3">
+                                <i class="fas fa-plus me-2"></i>Book Slot
                             </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
                         </div>
                     </div>
+                </div>
+                <div class="table-container py-3 px-3">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Booking ID</th>
+                                <th>Vehicle Number</th>
+                                <th>Employee</th>
+                                <th>Slot Number</th>
+                                <th>Status</th>
+                                <th>Date and Time</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn btn-sm btn-primary">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK002</td>
+                                <td>XYZ456</td>
+                                <td>Jane Smith</td>
+                                <td>B-202</td>
+                                <td>Cancelled</td>
+                                <td>2025-09-16 02:00 PM</td>
+                                <td><button class="btn btn-sm btn-primary">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK003</td>
+                                <td>LMN789</td>
+                                <td>Robert Brown</td>
+                                <td>C-303</td>
+                                <td>Pending</td>
+                                <td>2025-09-15 09:00 AM</td>
+                                <td><button class="btn btn-sm btn-primary">View</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </main>
         </div>
     </div>
+    <script src="../admin/js/bookings.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
