bug_fix: removed bootstrap and shifted to plain css

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ParkNex - Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../public/css/common-styles.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="../public/css/common-styles.css">
+
 </head>
 
 <body>
@@ -21,13 +22,13 @@
 
             <ul class="nav-menu">
                 <li class="nav-item active">
-                    <a href="#" class="nav-link" data-section="dashboard">
+                    <a href="dashboard.html" class="nav-link" data-section="dashboard">
                         <i class="nav-icon fas fa-th-large"></i>
                         Dashboard
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="#" class="nav-link" data-section="bookings">
+                    <a href="bookings.html" class="nav-link" data-section="bookings">
                         <i class="nav-icon fas fa-calendar-alt"></i>
                         Bookings
                     </a>
@@ -156,24 +157,24 @@
                     </div>
                 </div>
                 <div class="alert-insights-secondary secondary " id="alert-insights">
-                            <div class="alert-card secondary attention">
-                                <div class="alert-header">
-                                    <i class="alert-icon fas fa-exclamation-triangle"></i>
-                                    <h4>Attention Required</h4>
-                                </div>
-                                <p>9 vehicles are parked without booking.</p>
-                                <button class="alert-action attention">View Details</button>
-                            </div>
+                    <div class="alert-card secondary attention">
+                        <div class="alert-header">
+                            <i class="alert-icon fas fa-exclamation-triangle"></i>
+                            <h4>Attention Required</h4>
+                        </div>
+                        <p>9 vehicles are parked without booking.</p>
+                        <button class="alert-action attention">View Details</button>
+                    </div>
 
-                            <!-- Sensor Issues -->
-                            <div class="alert-card secondary sensor">
-                                <div class="alert-header">
-                                    <i class="alert-icon fas fa-tools"></i>
-                                    <h4>Sensor Issues</h4>
-                                </div>
-                                <p>12 slots with sensor or connectivity issues require immediate attention.</p>
-                                <button class="alert-action sensor">View Details</button>
-                            </div>
+                    <!-- Sensor Issues -->
+                    <div class="alert-card secondary sensor">
+                        <div class="alert-header">
+                            <i class="alert-icon fas fa-tools"></i>
+                            <h4>Sensor Issues</h4>
+                        </div>
+                        <p>12 slots with sensor or connectivity issues require immediate attention.</p>
+                        <button class="alert-action sensor">View Details</button>
+                    </div>
                 </div>
 
                 <!-- Charts and Alerts Row -->
