--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -20,20 +20,20 @@
             </div>
 
             <ul class="nav-menu">
-                <li class="nav-item active">
-                    <a href="#" class="nav-link" data-section="dashboard">
+                <li class="nav-item">
+                    <a href="dashboard.html" class="nav-link" data-section="dashboard">
                         <i class="nav-icon fas fa-th-large"></i>
                         Dashboard
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a href="#" class="nav-link" data-section="bookings">
+                <li class="nav-item active">
+                    <a href="bookings.html" class="nav-link" data-section="bookings">
                         <i class="nav-icon fas fa-calendar-alt"></i>
                         Bookings
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="reports">
+                    <a href="report-index.html" class="nav-link" data-section="reports">
                         <i class="nav-icon fas fa-file-alt"></i>
                         Reports
                     </a>
@@ -45,19 +45,19 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="slot-management">
+                    <a href="slot-management.html" class="nav-link" data-section="slot-management">
                         <i class="nav-icon fas fa-plus"></i>
                         Slot Management
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="notifications">
+                    <a href="notifications.html" class="nav-link" data-section="notifications">
                         <i class="nav-icon fas fa-bell"></i>
                         Notifications
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="settings">
+                    <a href="settings.html" class="nav-link" data-section="settings">
                         <i class="nav-icon fas fa-cog"></i>
                         Settings
                     </a>
