--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -84,7 +84,7 @@
             <header class="dashboard-header">
                 <div class="header-content">
                     <div class="header-left">
-                        <h1>Dashboard</h1>
+                        <h1>Dashboard abcdefg</h1>
                         <p>Real time parking lot management and monitoring</p>
                     </div>
                     <div class="header-right">
