feat: added slot selection for admin booking

--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -143,6 +143,114 @@
                                 <td><button class="btn-action">View</button></td>
                             </tr>
                             <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
+                                <td>#BK001</td>
+                                <td>ABC123</td>
+                                <td>John Doe</td>
+                                <td>A-101</td>
+                                <td>Booked</td>
+                                <td>2025-09-17 10:00 AM</td>
+                                <td><button class="btn-action">View</button></td>
+                            </tr>
+                            <tr>
                                 <td>#BK002</td>
                                 <td>XYZ456</td>
                                 <td>Jane Smith</td>
