--- a/admin/slot-management.html
+++ b/admin/slot-management.html
@@ -131,28 +131,16 @@
             <h3>Quick Actions & Search Filters</h3>
 
             <div class="quick-filters">
-              <button
-                class="btn btn-secondary" 
-                id="btn-unbooked"
-              >
+              <button class="btn btn-secondary" id="btn-unbooked">
                 View Unbooked Slots
               </button>
-              <button 
-                class="btn btn-secondary" 
-                id="btn-ev"
-              >
+              <button class="btn btn-secondary" id="btn-ev">
                 View EV Slots
               </button>
-              <button
-                class="btn btn-secondary"
-                id="btn-handicapped"
-              >
+              <button class="btn btn-secondary" id="btn-handicapped">
                 View Handicapped Slots
               </button>
-              <button 
-                class="btn btn-secondary"
-                id="clear-filters" 
-              >
+              <button class="btn btn-secondary" id="clear-filters">
                 Clear Filters
               </button>
             </div>
@@ -198,7 +186,7 @@
                 <option value="available">Available</option>
                 <option value="occupied">Occupied</option>
                 <option value="reserved">Reserved</option>
-                <option value="unauthorized">Unauthorized</option>
+                <option value="unauthorized">Unbooked</option>
               </select>
             </div>
           </div>
@@ -253,6 +241,7 @@
           </div>
         </div>
       </div>
+
       <!-- Modal for Add New Slot -->
       <div class="modal" id="addSlotModal">
         <div class="modal-content">
@@ -261,15 +250,14 @@
               <i class="fa-solid fa-plus"></i>
               Add New Slot
             </h3>
-            <button class="modal-close" onclick="closeModal('addSlotModal')">
-              &times;
-            </button>
+            <button class="modal-close" id="closeAddSlotModal">&times;</button>
           </div>
           <form id="addSlotForm">
+            <!-- Slot Number -->
             <div class="form-group">
-              <label class="form-label"
-                >Slot Number <span class="required">*</span></label
-              >
+              <label class="form-label">
+                Slot Number <span class="required">*</span>
+              </label>
               <input
                 type="text"
                 class="form-input"
@@ -279,16 +267,18 @@
               />
             </div>
 
+            <!-- Location -->
             <div class="form-group">
               <label class="form-label">Location</label>
               <input
                 type="text"
                 class="form-input"
                 id="slotLocation"
-                placeholder="e.g. Thiruvanathapuram"
+                placeholder="e.g. Thiruvananthapuram"
               />
             </div>
 
+            <!-- Building + Group -->
             <div class="form-row">
               <div class="form-group">
                 <label class="form-label">Building</label>
@@ -310,11 +300,12 @@
               </div>
             </div>
 
+            <!-- Slot Type + Initial Status -->
             <div class="form-row">
               <div class="form-group">
-                <label class="form-label"
-                  >Slot Type <span class="required">*</span></label
-                >
+                <label class="form-label">
+                  Slot Type <span class="required">*</span>
+                </label>
                 <select class="form-select" id="slotType" required>
                   <option value="normal">Normal</option>
                   <option value="ev">EV</option>
@@ -322,9 +313,9 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="form-label"
-                  >Initial Status <span class="required">*</span></label
-                >
+                <label class="form-label">
+                  Initial Status <span class="required">*</span>
+                </label>
                 <select class="form-select" id="slotInitialStatus" required>
                   <option value="available">Available</option>
                   <option value="occupied">Occupied</option>
@@ -334,24 +325,33 @@
               </div>
             </div>
 
+            <!-- Is Special -->
             <div class="form-group">
+              <label class="form-label">Is Special</label>
+              <select class="form-select" id="slotIsSpecial">
+                <option value="no" selected>No</option>
+                <option value="yes">Yes</option>
+              </select>
+            </div>
+
+            <!-- Notes (hidden unless "Is Special = Yes") -->
+            <div class="form-group" id="notesSection" style="display: none">
               <label class="form-label">Notes</label>
               <textarea
                 class="form-textarea"
                 id="slotNotes"
-                placeholder="e.g. Near Corner, Small parking space etc."
+                placeholder="e.g. Near pillar, small parking space, tight corner etc."
               ></textarea>
             </div>
 
+            <!-- Actions -->
             <div class="modal-actions">
-              <button
-                type="button"
-                class="btn btn-cancel"
-                onclick="closeModal('addSlotModal')"
-              >
+              <button type="button" class="popup-btns btn-cancel" id="cancelAddSlot">
                 Cancel
               </button>
-              <button type="submit" class="btn btn-primary">Add Slot</button>
+              <button type="submit" class="popup-btns btn-primary">
+                <i class="nav-icon fas fa-plus"></i>
+                Add Slot</button>
             </div>
           </form>
         </div>
@@ -454,6 +454,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/slot-management.js"></script>
+    <script type='module' src="./js/slot-management.js"></script>
   </body>
 </html>
