--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -58,6 +58,9 @@
                 <p class="admin-name">Admin User</p>
                 <p class="admin-email">admin@park.com</p>
             </div>
+            <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
+            </div>
         </div>
     </div>
 </nav>
