fix: fixed the slot display

--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -274,7 +274,7 @@
             </main>
         </div>
     </div>
-    <script src="../admin/js/bookings.js"></script>
+    <script type="module" src="../admin/js/bookings.js"></script>
 </body>
 
 </html>
