--- a/admin/vehicle_management.html
+++ b/admin/vehicle_management.html
@@ -29,49 +29,49 @@
             </div>
 
             <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="dashboard">
-                        <i class="nav-icon fas fa-th-large"></i>
-                        Dashboard
-                    </a>
-                </li>
-                <li class="nav-item ">
-                    <a href="#" class="nav-link" data-section="bookings">
-                        <i class="nav-icon fas fa-calendar-alt"></i>
-                        Bookings
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="reports">
-                        <i class="nav-icon fas fa-file-alt"></i>
-                        Reports
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a href="#" class="nav-link" data-section="vehicle-management">
-                        <i class="nav-icon fas fa-car"></i>
-                        Vehicle Management
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="slot-management">
-                        <i class="nav-icon fas fa-plus"></i>
-                        Slot Management
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="notifications">
-                        <i class="nav-icon fas fa-bell"></i>
-                        Notifications
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="settings">
-                        <i class="nav-icon fas fa-cog"></i>
-                        Settings
-                    </a>
-                </li>
-            </ul>
+        <li class="nav-item">
+            <a href="dashboard.html" class="nav-link" data-section="dashboard">
+                <i class="nav-icon fas fa-th-large"></i>
+                Dashboard
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="bookings.html" class="nav-link" data-section="bookings">
+                <i class="nav-icon fas fa-calendar-alt"></i>
+                Bookings
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="report-index.html" class="nav-link" data-section="reports">
+                <i class="nav-icon fas fa-file-alt"></i>
+                Reports
+            </a>
+        </li>
+        <li class="nav-item active">
+            <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
+                <i class="nav-icon fas fa-car"></i>
+                Vehicle Management
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="slot-management.html" class="nav-link" data-section="slot-management">
+                <i class="nav-icon fas fa-plus"></i>
+                Slot Management
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="notifications.html" class="nav-link" data-section="notifications">
+                <i class="nav-icon fas fa-bell"></i>
+                Notifications
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="settings.html" class="nav-link" data-section="settings">
+                <i class="nav-icon fas fa-cog"></i>
+                Settings
+            </a>
+        </li>
+    </ul>
 
             <div class="sidebar-footer">
                 <div class="admin-profile">
@@ -174,15 +174,19 @@
             <div class="filter-section">
                 <select class="filter-select">
                     <option>All Departments</option>
-                    <option>IT</option>
-                    <option>HR</option>
-                    <option>Finance</option>
-                    <option>Marketing</option>
+                    <option>DES</option>
+                    <option>ATS</option>
+                    <option>DU1</option>
+                    <option>DU2</option>
+                    <option>DU3</option>
+                    <option>DU4</option>
+                    <option>DU5</option>
+                    <option>DU6</option>
                 </select>
                 <select class="filter-select">
                     <option>All Status</option>
-                    <option>Active</option>
-                    <option>Inactive</option>
+                    <option>Booked</option>
+                    <option>Unbooked</option>
                 </select>
                 <select class="filter-select">
                     <option>Authorization</option>
