--- a/public/test.html
+++ b/public/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/seed-parking-slot.js" type="module""></script>
+    <script src="js/seed-employees.js" type="module""></script>
 </body>
 </html>
